# price-comparison-service

./: .gitignore  2025-11-15_20-03-25_contents_of_backend__dealer_details_directory.txt  2025-11-15_20-12-53_contents_of_backend__products_list_directory.txt  NOTES.TXT  README.md  docker-compose.yml  setup.cfg
backend__dealer_details/: Dockerfile  package.json  server.js
backend__products_list/: Dockerfile  app.py  requirements.txt
backend__products_list/tests/: factories.py  test_products.py
frontend__dealer_evaluation/: Dockerfile
frontend__dealer_evaluation/html/: index.html  index.html_prev
