[metadata]
name = price-comparison-service

[tool:pytest]
testpaths = backend__products_list/tests
addopts = -v --cov=backend__products_list --cov-report=term-missing


[coverage:run]
source = backend__products_list
omit = */tests/*

[coverage:report]
exclude_lines =
    raise NotImplementedError
    if __name__ == .__main__.:
